--- a/Finnish/main/ThemeManager.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/ThemeManager.apk/res/values-fi-rFI/plurals.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="guide_used_number">
+        <item quantity="other">Asetettu %1$d laitteelle</item>
+        <item quantity="one">Asetettu %1$d laitteelle</item>
+    </plurals>
 	<plurals name="resource_comment_score_count">
         <item quantity="other">%d kommenttia</item>
         <item quantity="one">%d kommentti</item>
