--- a/Finnish/main/Email.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/Email.apk/res/values-fi-rFI/arrays.xml
@@ -51,6 +51,10 @@
         <item>Vahempi viesti</item>
         <item>Postilaatikko</item>
     </string-array>
+    <string-array name="prefEntries_contact_add">
+        <item>Kaikki</item>
+        <item>Vain vastaanottajat</item>
+    </string-array>
     <string-array name="signature_normal_string_array">
         <item>Blogi:</item>
         <item>Sivusto:</item>
